--- a/fedora_base/defaults/main.yml
+++ b/fedora_base/defaults/main.yml
@@ -8,24 +8,27 @@ base_rpms:
   - zsh-syntax-highlighting
   - vim-powerline
   - breeze-cursor-theme
+  - papirus-icon-theme
+  - overpass-fonts
+  - overpass-mono-fonts
 base_managed_configs:
   vimrc:
     name: vimrc
     template: vimrc.j2
-    destination: "/home/bshephar/.vimrc"
+    destination: "/home/{{ ansible_user }}/.vimrc"
   zshrc:
     name: zshrc
     template: zshrc.j2
-    destination: "/home/bshephar/.zshrc"
+    destination: "/home/{{ ansible_user }}/.zshrc"
 base_git_repos:
   wallpapers:
     name: wallpapers
     repo: https://gitlab.gnome.org/GNOME/gnome-backgrounds.git
-    destination: "/home/bshephar/Pictures/Wallpapers/"
+    destination: "/home/{{ ansible_user }}/Pictures/Wallpapers/backgrounds"
   p10k:
     name: p10k
     repo: https://github.com/romkatv/powerlevel10k.git
-    destination: "/home/bshephar/Documents/Code/p10k"
+    destination: "/home/{{ ansible_user }}/Documents/Code/p10k"
     depth: 1
 base_gnome_settings:
   color-scheme: 'prefer-dark'
