--- a/fedora_base/meta/main.yml
+++ b/fedora_base/meta/main.yml
@@ -46,8 +46,6 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies:
-  - python3-psutil
-  - git
+dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
