--- a/fedora_base/tasks/themes.yml
+++ b/fedora_base/tasks/themes.yml
@@ -11,7 +11,7 @@
 - name: Copy wallpaper
   ansible.builtin.copy:
     remote_src: true
-    src: "/home/{{ ansible_user }}/Pictures/Wallpapers/backgrounds/truchet-d.jpg"
+    src: "/home/{{ ansible_user }}/{{ base_pics_dir }}/truchet-d.jpg"
     dest: "/home/{{ ansible_user }}/.local/share/backgrounds/truchet-d.jpg"
 
 - name: Set wallpaper permission
@@ -23,36 +23,36 @@
 - name: Set wallpaper
   dconf:
     key: "/org/gnome/desktop/background/picture-uri-dark"
-    value: "'file:///home/{{ ansible_user }}/.local/share/backgrounds/truchet-d.jpg'"
+    value: "'file:///home/{{ ansible_user }}/{{ gnome_wp_dir }}/truchet-d.jpg'"
 
 - name: Download, extract and install theme
   block:
-  - name: Download theme
-    get_url:
-      url: "https://github.com/Aryan20/DraculaSur-gtk-theme/archive/master.zip"
-      dest: /tmp/
-    register: theme_get_result
+    - name: Download theme
+      get_url:
+        url: "https://github.com/Aryan20/DraculaSur-gtk-theme/archive/master.zip"
+        dest: /tmp/
+      register: theme_get_result
 
-  - name: Extract it
-    ansible.builtin.unarchive:
-      remote_src: True
-      src: "{{ theme_get_result.dest }}"
-      dest: "/home/{{ ansible_user }}/.themes/DraculaSur-gtk-theme"
+    - name: Extract it
+      ansible.builtin.unarchive:
+        remote_src: true
+        src: "{{ theme_get_result.dest }}"
+        dest: "/home/{{ ansible_user }}/.themes/DraculaSur-gtk-theme"
 
-  - name: Cleanup
-    ansible.builtin.file:
-      path: "/tmp/DraculaSur-gtk-theme-master.zip"
-      state: absent
+    - name: Cleanup
+      ansible.builtin.file:
+        path: "/tmp/DraculaSur-gtk-theme-master.zip"
+        state: absent
 
-  - name: Make fonts directory
-    ansible.builtin.file:
-      path: "/home/{{ ansible_user }}/.local/share/fonts/"
-      state: directory
+    - name: Make fonts directory
+      ansible.builtin.file:
+        path: "/home/{{ ansible_user }}/.local/share/fonts/"
+        state: directory
 
-  - name: Collect fonts
-    get_url:
-      url: "https://github.com/ryanoasis/nerd-fonts/releases/download/v2.1.0/Hack.zip"
-      dest: "/home/{{ ansible_user }}/.local/share/fonts/"
+    - name: Collect fonts
+      get_url:
+        url: "https://github.com/ryanoasis/nerd-fonts/releases/download/v2.1.0/Hack.zip"
+        dest: "/home/{{ ansible_user }}/.local/share/fonts/"
 
 
 - name: Set the theme
