--- a/fedora_base/meta/main.yml
+++ b/fedora_base/meta/main.yml
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: GPL-2.0-or-later
 
   min_ansible_version: 2.9
 
@@ -28,9 +28,9 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-  - name: Fedora
-    versions:
-    - 36
+    - name: Fedora
+      versions:
+        - 36
   # - name: SomePlatform
   #   versions:
   #   - all
