Change to fully qualified module names

--- a/fedora_base/defaults/main.yml
+++ b/fedora_base/defaults/main.yml
@@ -28,7 +28,8 @@ base_git_repos:
   wallpapers:
     name: wallpapers
     repo: https://gitlab.gnome.org/GNOME/gnome-backgrounds.git
-    destination: "/home/{{ ansible_user }}/Pictures/Wallpapers/backgrounds"
+    destination: "/home/{{ ansible_user }}/Pictures/Wallpapers/gnome-wp"
+    depth: 1
   p10k:
     name: p10k
     repo: https://github.com/romkatv/powerlevel10k.git
@@ -48,6 +49,6 @@ base_gnome_settings:
   monospace-font-name: 'Hack Nerd Font Mono Bold 10'
   toolbar-style: 'text'
   toolkit-accessibility: false
-base_pics_dir: "Pictures/Wallpapers/backgrounds"
+base_pics_dir: "Pictures/Wallpapers/gnome-wp/backgrounds"
 gnome_wp_dir: ".local/share/backgrounds"
 base_wp: "truchet-d.jpg"
