--- a/fedora_base/vars/main.yml
+++ b/fedora_base/vars/main.yml
@@ -1,2 +1,49 @@
 ---
 # vars file for base
+base_rpms:
+  - vim
+  - zsh
+  - tmux
+  - zsh-autosuggestions
+  - zsh-syntax-highlighting
+  - vim-powerline
+  - breeze-cursor-theme
+  - papirus-icon-theme
+  - overpass-fonts
+  - overpass-mono-fonts
+  - python3-psutil
+base_managed_configs:
+  vimrc:
+    name: vimrc
+    template: vimrc.j2
+    destination: "/home/{{ ansible_user }}/.vimrc"
+  zshrc:
+    name: zshrc
+    template: zshrc.j2
+    destination: "/home/{{ ansible_user }}/.zshrc"
+base_git_repos:
+  wallpapers:
+    name: wallpapers
+    repo: https://gitlab.gnome.org/GNOME/gnome-backgrounds.git
+    destination: "/home/{{ ansible_user }}/Pictures/Wallpapers/backgrounds"
+  p10k:
+    name: p10k
+    repo: https://github.com/romkatv/powerlevel10k.git
+    destination: "/home/{{ ansible_user }}/Documents/Code/p10k"
+    depth: 1
+base_gnome_settings:
+  color-scheme: 'prefer-dark'
+  cursor-size: 24
+  cursor-theme: 'Breeze_Snow'
+  enable-animations: true
+  font-antialiasing: 'grayscale'
+  font-hinting: 'slight'
+  font-name: 'Overpass,  10'
+  gtk-im-module: 'gtk-im-context-simple'
+  gtk-theme: 'DraculaSur-gtk-theme'
+  icon-theme: 'Papirus'
+  monospace-font-name: 'Hack Nerd Font Mono Bold 10'
+  toolbar-style: 'text'
+  toolkit-accessibility: false
+base_theme_url: "https://github.com/Aryan20/DraculaSur-gtk-theme/archive/master.zip"
+  
