--- a/fedora_base/tasks/themes.yml
+++ b/fedora_base/tasks/themes.yml
@@ -78,7 +78,7 @@
 - name: Set terminal theme  # noqa no-changed-when
   ansible.builtin.shell: >
        set -o pipefail && \
-       cat {{ ansible_env.HOME }}/.config/terminal.preferences | dconf load /org/gnome/terminal/legacy/profiles:/
+       cat {{ ansible_env.HOME }}/.config/terminal.preferences | dconf load /org/gnome/terminal/
   tags: notest
 
 - name: Set the theme
